--- a/avicola-frontend/src/app/features/configuracion/configuracion.component.html
+++ b/avicola-frontend/src/app/features/configuracion/configuracion.component.html
@@ -9,15 +9,15 @@
                class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
                 Configuración General
             </a>
-            <a routerLink="credenciales"
-               routerLinkActive="border-blue-500 text-blue-600"
-               class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
-                Credenciales
-            </a>
             <a routerLink="animal-config"
                routerLinkActive="border-blue-500 text-blue-600"
                class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
                 Configuración de Animales
+            </a>
+            <a routerLink="razas"
+               routerLinkActive="border-blue-500 text-blue-600"
+               class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                Configuración de Razas
             </a>
         </nav>
     </div>
